--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.22.0",
+    "@tavily/core": "^0.5.12",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
@@ -42,7 +44,8 @@
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pdfjs-dist": "^5.4.149"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
